objects/spExams__Exam_Question__c.object
<CustomObject>
    <fields>
        <fullName>spExams__Exam__c</fullName>
        <label>Exam</label>
        <referenceTo>spExams__Exam__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Exam_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>spExams__Question_Type__c</fullName>
        <label>Question Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spExams__Question__c</fullName>
        <label>Question</label>
        <referenceTo>spExams__Question__c</referenceTo>
        <relationshipLabel>Exam Questions</relationshipLabel>
        <relationshipName>Exam_Questions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Exam Question</label>
    <nameField>
        <displayFormat>EQ-{0000000}</displayFormat>
        <label>Exam Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exam Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>spExams__Validate_Number_Answer_And_Exam_Status</fullName>
        <active>true</active>
        <description>Avoid to add a new question with out answer into the Exam Question object and also avoid add a new Exam with a status different to Draft</description>
        <errorConditionFormula>(spExams__Question__r.spExams__Number_of_Answer__c = 0) ||  (ISPICKVAL(spExams__Exam__r.spExams__Status__c, &quot;Draft&quot;) = false)</errorConditionFormula>
        <errorMessage>Please, verify that the number of answer in this question be greater than 0 and the exam status equal to Draft</errorMessage>
    </validationRules>
</CustomObject>